[package]
name = "seismotail"
version = "0.1.0"
edition = "2024"
description = "Real-time earthquake monitoring from your terminal"
license = "MIT"
repository = "https://github.com/yourusername/seismotail"
keywords = ["earthquake", "seismic", "cli", "prometheus", "usgs"]
categories = ["command-line-utilities"]

# NASA Power of 10 compliance: forbid unsafe, enforce warnings
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "cargo"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
